added slider thing
